# commit_chronicle

./: .gitignore  README.md  choosing_repos.ipynb  collect_data.py  commit_processor.py  data_processor.py  pyproject.toml  requirements.txt  stats_and_format_change.ipynb
configs/: collect_data.yaml  merge_files.yaml  process_data.yaml  tokenize_data.yaml  train_tokenizer.yaml
data_collection/: collect_data.py
data_collection/configs/: collect_data_conf.yaml
data_collection/utils/: commit_processor.py  repo_processor.py
notebooks/: choosing_repos.ipynb  explore_dataset.ipynb  filters.ipynb
notebooks/java/: choosing_repos.ipynb
notebooks/multilang/: choosing_repos.ipynb
notebooks/python/: choosing_repos.ipynb
notebooks_and_filtering_code/: choosing_repos.ipynb  data_processor.py  stats_and_format_change.ipynb
scripts/: deduplication_processor.py  diff_processor.py  drop_duplicates.py  message_filter.py  percentile_processor.py  prepare_for_deduplication.py  preprocess_for_deduplication.py  training_processor.py  unite_to_one_file.py
scripts/post_deduplication/: prepare_for_tokenization.py
scripts/post_deduplication_ulits/: message_filter.py  training_processor.py
scripts/pre_deduplication/: prepare_for_deduplication.py
src/: base_utils.py  collect_data.py  drop_clones.py  merge_files.py  process_data.py  tokenize_data.py  train_tokenizer.py
src/collection/: __init__.py  (+5 more)
tests/: test_diff_processor.py  test_exact_hash_processor.py  test_message_processor.py  test_outliers_processor.py  test_post_deduplication_processor.py  test_repo_processor.py
(+59 files in other folders)
